[gd_scene load_steps=3 format=3 uid="uid://cs4g5kj83nghr"]

[ext_resource type="Script" path="res://scripts/blade/another_sword.gd" id="1_mmnhm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jgky1"]
radius = 99.827

[node name="AnotherSword" type="Node2D"]
script = ExtResource("1_mmnhm")

[node name="Pol1" type="Polygon2D" parent="."]
polygon = PackedVector2Array(0, 0, 128, 0, 128, 32, 0, 32, -19, -67)

[node name="Pol2" type="Polygon2D" parent="."]
polygon = PackedVector2Array(0, 48, 48, -16, 48, 48)

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PackedVector2Array(128, 128, 384, 128, 384, 256, 128, 256)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(80, 192)
rotation = -0.322112
scale = Vector2(1.01368, -0.752887)
shape = SubResource("CircleShape2D_jgky1")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
